laborations/old-2018-lab1/testsuite/bad/bad032.cc
int foo() {
	while (return 5) 45;
	return x;
}
